--- a/menu_inicial/index.html
+++ b/menu_inicial/index.html
@@ -259,17 +259,30 @@
       <div class="modal-close" data-close="modalProfile">✕</div>
     </div>
     <div class="profile-avatar-section">
-      <div class="profile-avatar-preview" id="profileAvatarPreview">GL</div>
-      <div>
-        <div style="font-size:.75rem;color:var(--texto-dim);margin-bottom:.4rem;text-transform:uppercase;letter-spacing:.08em">Hash da conta</div>
-        <div class="hash-info-box" style="padding:.4rem .7rem">
-          <span class="hash-icon-lg" style="font-size:1rem">⬡</span>
-          <div>
-            <div style="font-family:monospace;font-size:.75rem;color:var(--neon)" id="profileHashDisplay">—</div>
-          </div>
-          <button class="btn btn-ghost btn-sm" id="btnRegenHash" style="margin-left:.5rem">↻ Novo</button>
+      <!-- Photo upload zone -->
+      <div class="profile-photo-wrap" id="profilePhotoWrap">
+        <div class="profile-avatar-preview" id="profileAvatarPreview">GL</div>
+        <label class="profile-photo-overlay" for="profilePhotoInput" title="Trocar foto">
+          <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" width="18" height="18">
+            <path d="M23 19a2 2 0 01-2 2H3a2 2 0 01-2-2V8a2 2 0 012-2h4l2-3h6l2 3h4a2 2 0 012 2z"/>
+            <circle cx="12" cy="13" r="4"/>
+          </svg>
+          <span>Foto</span>
+        </label>
+        <input type="file" id="profilePhotoInput" accept="image/*" style="display:none"/>
+        <button class="profile-photo-remove" id="btnRemovePhoto" title="Remover foto" style="display:none">✕</button>
+      </div>
+
+      <div style="flex:1">
+        <div style="font-size:.8rem;font-weight:600;color:var(--texto);margin-bottom:.25rem" id="profilePreviewName">George L.</div>
+        <div style="font-size:.72rem;color:var(--texto-dim);margin-bottom:.6rem" id="profilePreviewRole">Admin · Cronos</div>
+        <div style="font-size:.7rem;color:var(--texto-dim);margin-bottom:.3rem;text-transform:uppercase;letter-spacing:.08em">Hash da conta</div>
+        <div class="hash-info-box" style="padding:.35rem .65rem">
+          <span class="hash-icon-lg" style="font-size:.9rem">⬡</span>
+          <div style="font-family:monospace;font-size:.72rem;color:var(--neon);flex:1" id="profileHashDisplay">—</div>
+          <button class="btn btn-ghost btn-sm" id="btnRegenHash" style="padding:.2rem .5rem;font-size:.68rem">↻</button>
         </div>
-        <div style="font-size:.68rem;color:var(--texto-dim);margin-top:.3rem">Usado para identificação na API</div>
+        <div style="font-size:.65rem;color:var(--texto-dim);margin-top:.25rem">Formato: JPG, PNG, WEBP · máx 2MB</div>
       </div>
     </div>
     <div class="form-row">
